<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_action_attach_image"
            android:title="@string/menu_action_attach_image"
            android:icon="@drawable/ic_attach_file_24dp"
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_action_delete_note"
            android:title="@string/menu_action_delete_note"
            android:icon="@drawable/ic_clear_black_24dp"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_action_save"
            android:title="@string/menu_action_save"
            android:icon="@drawable/ic_check_black_24dp"
            app:showAsAction="ifRoom"/>
</menu>