<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

    <ImageView
            android:id="@+id/note_image"

            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            tools:srcCompat="@drawable/image_example"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/note_image_content_description"
    />

    <TextView
            android:id="@+id/note_title"
            tools:text="@string/tools_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/note_image"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="16sp"/>
            <!--android:textColor="@android:color/black"-->


    <TextView
            android:id="@+id/note_text"
            tools:text="@string/tools_note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_title"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/note_image"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:maxLines="2"/>
            <!--android:textColor="@android:color/black"-->

    <TextView
            android:id="@+id/note_date"
            tools:text="@string/tools_note_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note_text"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/note_image"
            android:layout_margin="8dp"
            android:visibility="gone"
    />
</RelativeLayout>