<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
        >
            <EditText
                    android:id="@+id/email_input_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="top"
                    android:hint="@string/login_input_hint"
                    android:autofillHints="@string/login_input_hint"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/password_input_up"
                    app:layout_constraintVertical_chainStyle="packed"/>

            <EditText
                    android:id="@+id/password_input_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/password_input_hint"
                    android:autofillHints="@string/password_input_hint"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_input_up"
                    app:layout_constraintBottom_toTopOf="@id/repeat_password_input_up"
            />

            <EditText
                    android:id="@+id/repeat_password_input_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/repeat_password_input_hint"
                    android:autofillHints="@string/repeat_password_input_hint"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_input_up"
                    app:layout_constraintBottom_toTopOf="@id/sing_up_button_up"
            />

            <Button
                    android:id="@+id/sing_up_button_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sign_up_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/repeat_password_input_up"
                    app:layout_constraintBottom_toBottomOf="parent"
            />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>