<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.NoteDetailsActivity"
        tools:menu="@menu/menu_note_details">

    <android.support.v7.widget.Toolbar
            android:id="@+id/note_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <ScrollView
            android:id="@+id/note_details_fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/note_details_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:fillViewport="false"
    >
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
        >

            <EditText
                    android:id="@+id/note_details_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/tools_note_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:autofillHints="@string/tools_note_title"
                    android:hint="@string/tools_note_title"
                    android:inputType="text"/>

            <EditText
                    android:id="@+id/note_details_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/tools_note_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/note_details_title"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:autofillHints="@string/tools_note_text"
                    android:hint="@string/tools_note_text"
                    android:inputType="text|textMultiLine"/>

            <ImageView
                    android:id="@+id/note_details_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/note_details_text"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/note_image_content_description"
                    tools:srcCompat="@drawable/image_example"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>

            <ImageButton
                    android:id="@+id/delete_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@+id/note_details_image"
                    app:layout_constraintEnd_toEndOf="@+id/note_details_image"
                    android:contentDescription="@string/note_image_content_description"

                    android:visibility="gone"
            />

            <TextView
                    android:id="@+id/note_details_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tools_note_date"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/note_details_image"
                    android:layout_marginTop="16dp"

                    android:visibility="gone"
            />

            <TextView
                    android:id="@+id/note_details_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_label"
                    app:layout_constraintRight_toLeftOf="@id/note_details_date"
                    app:layout_constraintBaseline_toBaselineOf="@+id/note_details_date"
                    android:layout_marginEnd="4dp"

                    android:visibility="gone"
            />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>